# frontend/swagger.json
@@ -144,6 +144,34 @@
             }
           }
         }
+      },
+      "put": {
+        "tags": [
+          "Client"
+        ],
+        "operationId": "Update",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateClientCommand"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "format": "uuid"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/Representative": {
@@ -242,6 +270,16 @@
         "additionalProperties": false
       },
       "CreateClientCommand": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "UpdateClientCommand": {
         "type": "object",
         "properties": {
           "name": {
